@@ -1,6 +1,7 @@
-GEPI-1.7.2 (version stable)-- Procédure d'installation
+GEPI-master (version de développement)(version stable)-- Procédure d'installation
 ==========================================
 
+Version de développement: NE PAS INSTALLER EN PRODUCTION !
 La branche stable actuelle est la 1.7.2
 
 ****************************************************
